source/css/styles.scss
---
---

$small-only: (max-width 40em);
$medium-down: (max-width 64em);
$medium-up: (min-width 64em);
$medium: 40.063em 64em;
$large: 64.063em 90em;
$large-up: (min-width 64.063em);

$yellow: #e5c810;
$main-color: $yellow;
$gray: rgba(black, 0.7);

@import 'breakpoint';
@import 'custom_styles';
@import 'base';
@import 'header';
@import 'button-extend';
@import 'icon-box';
@import 'checkerboard';
@import 'callout';
@import 'panels';
@import 'dual-panel';
@import 'bg-panel';
@import 'footer';
@import 'table';
@import 'case';
@import 'custom-sections';
@import 'resources';
@import 'canvas';
@import 'events';
@import 'introduction';
@import 'modals';
@import 'team';
@import 'framework';

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

@mixin placeholder {
  &::-webkit-input-placeholder { @content }
  &:-moz-placeholder { @content }
  &::-moz-placeholder { @content }
  &:-ms-input-placeholder { @content }
}

